horizontal overflow fix

--- a/css/andycheng.webflow.css
+++ b/css/andycheng.webflow.css
@@ -95,7 +95,7 @@ img {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 100vw;
+  width: auto;
   height: 100vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
